--- a/src/Components/Navs/Navbar.css
+++ b/src/Components/Navs/Navbar.css
@@ -1,3 +1,7 @@
+.pageWrapper {
+  display: flex;
+}
+
 .navbar {
   box-shadow: none !important;
 }
@@ -24,24 +28,29 @@
 }
 
 .sidenav {
+  background-color: #0060a405;
   height: 100vh;
-  position: fixed;
+  position: sticky;
   top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 150px;
+  padding-top: 40px;
 }
 
-.sidenav_links {
+.sidenav_pages {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  align-items: center;
+  gap: 20px;
 }
 
 .navlink {
-  padding: 10px 24px !important;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 100px 10px 10px !important;
   text-decoration: none;
   width: 100%;
 }
@@ -51,5 +60,10 @@
 }
 
 .outlet_container {
-  padding-left: 150px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding-top: 40px;
+  width: 100%;
+  min-height: 100vh;
 }
