--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
-:root {
+html {
+  height: 100vh;
+}
+body {
+  background-color: #F0F0F0;
+}
+
+#root {
+  height:100vh;
+}
+
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -67,7 +78,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
